Edited text citations globally for Boissonnas
added "A. " to A. Boissonnas 1961 citations

added "P. " to P. Boissonnas 2003 citations

--- a/content/1-history/4.md
+++ b/content/1-history/4.md
@@ -61,7 +61,7 @@ In terms of adhesives used for lining and strip-lining, the NMM shows a preferen
 
 From 1971 to 1973, five sturgeon-glue linings were performed. These are rather rare in the United Kingdom and drew upon the team’s training from “masterly restorer Brianzev” in Russia ({% cite 'Percival-Prescott 2003a' 'viii' %}). Reports for the 1971 treatment of George Knight’s *Cleopatra's Needle Being Brought to England, 1877*, ca. 1877 (BHC0641), revealed that “sturgeon bladder adhesive” was selected because the work was “painted upon a white ground and of materials which would have yellowed and darkened had wax been used.”[^7] These linings were performed only prior to the conference and were quickly abandoned; studio notes and treatment reports convey the impression that the technique was difficult to master.[^8]
 
-Beva 371 was used for both strip-lining and lining, combined with a variety of fabrics (see [figs. 4.2](#fig-4-2), [4.3](#fig-4-3)). Initially, the preference was for TenCate, a polyvinyl alcohol fabric from the Netherlands, but this was gradually superseded by polyester sailcloth beginning in 1982, most likely introduced to the NMM by the Courtauld. Linen was used on one occasion with Beva 371 for lining but more frequently for strip-lining. Other materials were used more sporadically in conjunction with Beva 371, including woven polypropylene and glass fiber. These fabrics seem to have been used experimentally around the time of the lining conference and were not incorporated into usual practice. Glass fiber, introduced by Pierre Boissonnas ({% cite 'Boissonnas 1961' %}), was used over a prolonged period (1973–81), in combination with wax resin, Beva, or Beva with added wax, to help produce transparent linings.[^9]
+Beva 371 was used for both strip-lining and lining, combined with a variety of fabrics (see [figs. 4.2](#fig-4-2), [4.3](#fig-4-3)). Initially, the preference was for TenCate, a polyvinyl alcohol fabric from the Netherlands, but this was gradually superseded by polyester sailcloth beginning in 1982, most likely introduced to the NMM by the Courtauld. Linen was used on one occasion with Beva 371 for lining but more frequently for strip-lining. Other materials were used more sporadically in conjunction with Beva 371, including woven polypropylene and glass fiber. These fabrics seem to have been used experimentally around the time of the lining conference and were not incorporated into usual practice. Glass fiber, introduced by Pierre Boissonnas ({% cite 'A. Boissonnas 1961' %}), was used over a prolonged period (1973–81), in combination with wax resin, Beva, or Beva with added wax, to help produce transparent linings.[^9]
 
 {% figure 'fig-4-3' %}
 
@@ -115,7 +115,7 @@ In terms of lining fabrics, CIA experimented with different fabrics, almost enti
 
 {% figure 'fig-4-8' %}
 
-Glass fiber was used from 1975 until 1981, most likely for experimentation after the 1974 conference ({% cite 'Boissonnas 2003' %}). There were also a few examples of marouflage onto aluminum honeycomb. Polypropylene was used from 1979 and abandoned by 1981. Lascaux P110, a textile with a similar appearance to linen but made of polyester, was used from 1991 until 1995.
+Glass fiber was used from 1975 until 1981, most likely for experimentation after the 1974 conference ({% cite 'P. Boissonnas 2003' %}). There were also a few examples of marouflage onto aluminum honeycomb. Polypropylene was used from 1979 and abandoned by 1981. Lascaux P110, a textile with a similar appearance to linen but made of polyester, was used from 1991 until 1995.
 
 As at NMM, the adhesives used for strip-lining are Beva gel and film. The fabrics used for strip-linings are mostly synthetics, apart from one example in 1986 using linen. Synthetics used include Permawear 122, polyester sailcloth, and Lascaux P110.
 
