Change to citation Vasari (1568) 1998
1568, original pub date, should be in brackets. Changed in both the in-text citation and the bibliography

--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -70,7 +70,7 @@ It was not easy to find all the recipes used. In some cases, old documentary inf
 
 Knowing the materials used to prepare a canvas is essential to understanding the behavior of the lining treatment. With reference to the recipe, materials, and ingredients used in canvases in Spain, interesting research has been done (e.g., {% cite 'Gayo and Jover de Celis 2010' %}), but we still have a lot to learn. For example, the presence of ashes in the preparatory layers has only recently been confirmed in paintings ( {% cite 'Jover de Celis and Gayo 2014' %}; {% cite 'Carò, Centeno, and Mahon 2018' %}), although it appeared in recipes and treatises.
 
-Through the documents, we know that from the moment people started painting on canvas, a flour paste was used to prepare the canvas. Giorgio Vasari has written about flour with walnut oil, glue, and white lead for preparing the canvas ({% cite 'Vasari (1568) 1998' '119' %}). An anonymous Spanish manuscript from the end of the sixteenth century also mentions preparing the canvas with glue, flour, and gypsum and states that “if it were all flour, it would be better” ({% cite 'Bruquetas Galán 1998' %}).
+Through the documents, we know that from the moment people started painting on canvas, a flour paste was used to prepare the canvas. Giorgio Vasari has written about flour with walnut oil, glue, and white lead for preparing the canvas ({% cite 'Vasari [1568] 1998' '119' %}). An anonymous Spanish manuscript from the end of the sixteenth century also mentions preparing the canvas with glue, flour, and gypsum and states that “if it were all flour, it would be better” ({% cite 'Bruquetas Galán 1998' %}).
 
 We find the same in Francisco Pacheco’s treatise from the mid-seventeenth century: “Some work with flour or mill-dust paste, cooking oil and a little honey (which you can eat even if you are not hungry); they apply a coating of this to a well-stretched canvas to cover over the pores . . . But experience has taught me that any paste of gypsum, flour or ash gets damp and with time rots the canvas and the painting comes out in scabs” ({% cite 'Pacheco (1638) 1990' '481' %}). Antonio Palomino raises similar concerns in 1715, when explaining how to prepare the mixture by boiling and shaking it to avoid lumps: *gacha* paste with flour and water, honey, and a little linseed oil ({% cite 'Palomino (1715) 1947' '483' %}). In some cases, the presence of flour paste has been identified by scientific analysis ({% cite 'Helwig and Daly Hartin 1999' %}).
 
