--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -72,9 +72,9 @@ Knowing the materials used to prepare a canvas is essential to understanding the
 
 Through the documents, we know that from the moment people started painting on canvas, a flour paste was used to prepare the canvas. Giorgio Vasari has written about flour with walnut oil, glue, and white lead for preparing the canvas ({% cite 'Vasari [1568] 1998' '119' %}). An anonymous Spanish manuscript from the end of the sixteenth century also mentions preparing the canvas with glue, flour, and gypsum and states that “if it were all flour, it would be better” ({% cite 'Bruquetas Galán 1998' %}).
 
-We find the same in Francisco Pacheco’s treatise from the mid-seventeenth century: “Some work with flour or mill-dust paste, cooking oil and a little honey (which you can eat even if you are not hungry); they apply a coating of this to a well-stretched canvas to cover over the pores . . . But experience has taught me that any paste of gypsum, flour or ash gets damp and with time rots the canvas and the painting comes out in scabs” ({% cite 'Pacheco (1638) 1990' '481' %}). Antonio Palomino raises similar concerns in 1715, when explaining how to prepare the mixture by boiling and shaking it to avoid lumps: *gacha* paste with flour and water, honey, and a little linseed oil ({% cite 'Palomino (1715) 1947' '483' %}). In some cases, the presence of flour paste has been identified by scientific analysis ({% cite 'Helwig and Daly Hartin 1999' %}).
+We find the same in Francisco Pacheco’s treatise from the mid-seventeenth century: “Some work with flour or mill-dust paste, cooking oil and a little honey (which you can eat even if you are not hungry); they apply a coating of this to a well-stretched canvas to cover over the pores . . . But experience has taught me that any paste of gypsum, flour or ash gets damp and with time rots the canvas and the painting comes out in scabs” ({% cite 'Pacheco [1638] 1990' '481' %}). Antonio Palomino raises similar concerns in 1715, when explaining how to prepare the mixture by boiling and shaking it to avoid lumps: *gacha* paste with flour and water, honey, and a little linseed oil ({% cite 'Palomino [1715] 1947' '483' %}). In some cases, the presence of flour paste has been identified by scientific analysis ({% cite 'Helwig and Daly Hartin 1999' %}).
 
-A treatise by the Spaniard Vicente Poleró published in the mid-nineteenth century points to the lining of the canvas as an essential operation ({% cite 'Poleró (1853 and 1866) 2018' %}). He describes the procedure: cover the paint surface with paper and apply the adhesive to both the lining fabric mounted on a loom and to the original canvas on the back, then iron until it is completely dry. The idea was not simply to reinforce the support but also to fix the layers of color with an impregnation of glue paste (which was surely much more compatible with the original materials than modern plastic adhesives).
+A treatise by the Spaniard Vicente Poleró published in the mid-nineteenth century points to the lining of the canvas as an essential operation ({% cite 'Poleró [1853 and 1866] 2018' %}). He describes the procedure: cover the paint surface with paper and apply the adhesive to both the lining fabric mounted on a loom and to the original canvas on the back, then iron until it is completely dry. The idea was not simply to reinforce the support but also to fix the layers of color with an impregnation of glue paste (which was surely much more compatible with the original materials than modern plastic adhesives).
 
 Using the information gathered and the results of the questionnaire, we were able to establish the different ingredients used in the recipes and their function in the mixture: thickener, adhesive, fungicide, humectant, and so forth (see [table 18.1](#table-18-1)).
 
