Edited wording of notes 3 and 4 in paper 20
revised wording in notes

--- a/content/3-open-questions/20.md
+++ b/content/3-open-questions/20.md
@@ -118,10 +118,8 @@ This paper has outlined the basic features of the early generation of suction ta
 
 [^2]: Indeed, other papers presented at Greenwich, such as that of Chittenden, Lewis, and Percival-Prescott on low-pressure lining ({% cite 'Chittenden, Lewis, and Percival-Prescott 2003' %}), trace similar analyses and practical approaches as those outlined here summarizing Mehra’s thinking.
 
-[^3]: Interview with Bent Hacke, 1983.
+[^3]: Bent Hacke, interview by the author, 1983.
 
-[^4]: Interview with Bent Hacke, 1983.
+[^4]: Bent Hacke, interview by the author, 1983.
 
 [^5]: For instance, Mehra’s insistence on understanding the strength of the materials of a painting is more fully quantified by Mecklenburg’s research.
-
-Bent Hacke, interview by the author, 1983.
