Abbreviated citation in paper 21 n 4

--- a/content/3-open-questions/21.md
+++ b/content/3-open-questions/21.md
@@ -116,4 +116,4 @@ Until a comprehensive prediction tool is created, assessment of risks remains th
 
 [^3]: E-modulus is derived from a stress/strain test representing change of stress divided by the change in strain in the elastic (Hookean) region. High modulus can be understood as high stiffness.
 
-[^4]: Since this paper was written, we have proposed a computer model for untreated paintings; see D.-H. Lee, N.-S. Kim, M. Scharff, M. Nielsen, M. Mecklenburg, L. Fuster-López, L. Bratasz, and C. Anderson. 2022. "Numerical modelling of mechanical degradation of canvas paintings under dessiccation." *Heritage Science* 10: 1–13.
+[^4]: Since this paper was written, we have proposed a computer model for untreated paintings; see {% cite 'Lee et al. 2022' %}.
