Fixes to Flock citations in notes of paper 29

--- a/content/5-adhesives/29.md
+++ b/content/5-adhesives/29.md
@@ -224,9 +224,9 @@ The investigation into adhesives for thread-by-thread tear mending and suitable 
 
 [^7]: This means that, for example, the optical density, light refraction, transparency, translucency, or even opacity, and degree of gloss of the bonded area ideally correspond to the individual optical surface properties of the surrounding fabric.
 
-[^8]: Compare to {% cite 'Flock 2014' %} and {% cite 'Flock et al. 2019' %}, {% cite 'Flock et al. 2021a' '' '2021a' %}, and {% cite 'Flock et al. 2021b' '' '2021b' %}.
+[^8]: Compare to {% cite 'Flock 2014' %}, {% cite 'Flock et al. 2019' %}, {% cite 'Flock et al. 2021a' %}, and {% cite 'Flock et al. 2021b' %}.
 
-[^9]: For more details on scale effects, see, for example, {% cite 'Flock 2020a' '51, 55' %}; {% cite 'Flock et al. 2021a' %}, {% cite 'Flock et al. 2021b' '' '2021b' %}; and {% cite 'Flock 2014' '130–39' %}.
+[^9]: For more details on scale effects, see, for example, {% cite 'Flock 2020a' '51, 55' %}; {% cite 'Flock et al. 2021a' %}; {% cite 'Flock et al. 2021b' %}; and {% cite 'Flock 2014' '130–39' %}.
 
 [^10]: This problem has already been published ({% cite 'Flock 2014' %}); a more recent article in English describes the facts in the context of inevitable scattering results in bonding qualities ({% cite 'Flock et al. 2021a' %}).
 
