Edit to Acks in paper 53
x-ref- I didn't link it to paper 9 but that's fine

--- a/content/8-posters/53.md
+++ b/content/8-posters/53.md
@@ -99,7 +99,7 @@ The treatment was designed to be both lasting and reversible. Relining with an a
 
 ## Acknowledgments
 
-The complex lining system described in this text was developed by author Jos van Och. It is an adaptation of the mist-lining system. The cold-lining system using acrylic dispersions and a glass-fiber interleaf was first used for a large-scale ceiling painting from Huys Amerongen, Utrecht, in 2009, and further evolved for this particular series of paintings. The unique approach to solving structural problems presented by wax-resin-lined legacy paintings is the outcome of van Och's thirty-year expertise in treating canvas paintings. This experience was shared by the co-authors who were fellows at SRAL for the duration of this project. The mist-lining system is sill practical today, though van Och is retired, and is discussed elsewhere in this publication (see particularly paper 9).
+The complex lining system described in this text was developed by author Jos van Och. It is an adaptation of the mist-lining system. The cold-lining system using acrylic dispersions and a glass-fiber interleaf was first used for a large-scale ceiling painting from Huys Amerongen, Utrecht, in 2009, and further evolved for this particular series of paintings. The unique approach to solving structural problems presented by wax-resin-lined legacy paintings is the outcome of van Och's thirty-year expertise in treating canvas paintings. This experience was shared by the co-authors who were fellows at SRAL for the duration of this project. The mist-lining system is sill practical today, though van Och is retired, and is discussed elsewhere in this publication (see particularly "Demystifying Mist-Lining," paper 9).
 
 The authors thank Ana Pereira for the FTIR-ATR analysis, Ilona Jaaranen and Bascha Stabik for helping with practical work, and Nico van Bohemen Jr. for the interview.
 
