fix figure sizing via grouping

--- a/content/1-history/3.md
+++ b/content/1-history/3.md
@@ -107,7 +107,9 @@ Similar new—and even larger—low-pressure tables were designed and built ad h
 
 In the following six years, summer programs on the subject were organized at the School of Conservation (in collaboration with ICCROM) to introduce and discuss suction-table techniques and principles and making it possible for numerous participants over the years to try out selected techniques ([fig. 3.4](#fig-3-4)). Discussions were lively ([figs. 3.5](#fig-3-5), [3.6](#fig-3-6)) and included technical and ethical debates on the specific aspects of the techniques and the use of new materials. Such topics included nap-bond acrylic dispersion-adhesives, EVA-based adhesives (e.g., Beva 371), fiberglass cloth, limited interventions, temperature, humidity, strip-linings, loose-linings, and much more. In tune with the prevailing discussions in paintings conservation in general, the idea of how much treatment was really necessary—and if so, what kind—was discussed as well, and Percival-Prescott’s 1974 concept of the lining cycle and whether to treat or not to treat was a regular part of conversations.
 
-{% figuregroup '3' 'fig-3-4, fig-3-5, fig-3-6' %}
+{% figure 'fig-3-4' %}
+
+{% figuregroup '2' 'fig-3-5, fig-3-6' %}
 
 In parallel with the summer schools, a set of visual teaching aids was being produced in collaboration with the Getty Conservation Institute. The aim was to produce step-by-step images of the recently developed lining techniques, along with a detailed description of each step, as a didactic tool for teachers in canvas paintings conservation. The aids were used at each summer program and in regular courses at School of Conservation before being finalized in 1990 ({% cite 'Scharff 1995' %}).
 
