add shortcode for 11.5 video

--- a/content/2-present-practice/11.md
+++ b/content/2-present-practice/11.md
@@ -73,6 +73,8 @@ After the complete evaporation of solvents, always keeping the painting tensione
 
 {% figure 'fig-11-4' %}
 
+{% figure 'fig-11-5' %}
+
 It’s important to note that this method is not an alternative to the use of a hot table, but it permits heat transfer from the back when it is necessary to work with the painting facedown.[^15] Using a vacuum system and applying heat through a tub containing preheated water guarantees that the whole surface is treated with the same pressure and temperature, substantially reducing the risk of nonhomogeneous performance of the thermoplastic adhesive.
 
 In preparation for mending structural damages, some adhesives were tested ([table 11.1](#table-11-1)). To avoid damage to the original canvas in the future, the breaking point of the adhesive should be equal to or slightly less than the toughness value of the original yarn ({% cite 'Orata 2009' %}), measured by tension test with a dynamometer. The adhesive with a breaking point that is similar to that of the original yarn is highlighted in red in the table.
