--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -56,7 +56,7 @@ Among the aims of the project was to get a better understanding of the historica
 
 The project was organized in three parts: a documentary work or study, an experimental study, and the sharing of the research as it was carried out ([fig. 18.2](#fig-18-2-a), [table 18.1](#table-18-1)).
 
-{% figuregroup '3' 'fig-18-2-a, fig-18-2-b, fig-18-2-c' %}
+{% figuregroup '3' 'fig-18-2-a, fig-18-2-b, fig-18-2-c' '(a) A recipe for *gacha* used in 1948 by Tomás Pérez Alférez, liner at the Museo del Prado for the lining of an unspecified painting of the Church of San Martín. (b) Fourier transform infrared spectroscopy (FTIR) analysis of the adhesive used to line *El sueño del Patricio Juan* (*Juan the Patrician’s Dream*), by Bartolomé Esteban Murillo. c Measure of viscosity in a *gacha* recipe taken during the experimental study in the project. Images: (a) Archivo del Museo Nacional del Prado, (b) Laboratorio de Análisis del Museo Nacional del Prado, c Lining Project HAR 2011-24217 and Universidad Politècnica de València.' %}
 
 {% figure 'table-18-1' %}
 
