add two-column class to 2.1

--- a/content/1-history/2.md
+++ b/content/1-history/2.md
@@ -35,7 +35,7 @@ The aim of this paper is to revisit some key concepts in the time-dependent mech
 
 A stress-strain curve is derived from a simple tensile test, and it is often used to characterize the mechanical properties of painting materials. Force and displacement measurements are converted to stress and strain in order to remove the effects of sample geometry. The initial slope of a stress-strain curve in uniaxial tension is a measure of stiffness called the modulus of elasticity, *E*, or Young’s modulus. Experiments in shear mode define the shear modulus, while hydrostatic pressure gives the bulk modulus. For a viscoelastic material, these elastic moduli are time dependent, and the stress-strain relationship is nonlinear due to polymer relaxation during the test. [Figure 2.1](#fig-2-1) shows stress-strain curves from a series of tensile tests performed on free films of an artists oil paint. The results highlight that the modulus decreases with higher temperature and reduced rate of deformation, while the failure strain increases. Despite this trend, there is no simple relationship between stiffness and failure strain for materials in general. A material may be stiff and brittle or compliant and brittle.
 
-{% figure 'fig-2-1' %}
+{% figure 'fig-2-1' 'pdf-two-column' %}
 
 [Figure 2.2](#fig-2-2) illustrates the results of a tensile test with the time dimension added. The first graph ([fig. 2.2a](#fig-2-2)) shows the strain history as millistrain versus time, and indicates that the strain rate, *R*, is constant during the constant speed test due to the low failure strain. At higher strains, the strain rate would measurably decrease during a constant speed test due to the changing length of the sample. The second graph ([fig. 2.2b](#fig-2-2)) gives stress versus time, and the third ([fig. 2.2c](#fig-2-2)) presents a stress-strain curve. The latter shows a secant modulus, *E<sub>s</sub>* (at strain ε = 0.005), and the strain at failure ε<sub>f</sub>. Secant modulus can be a useful measure of stiffness due to nonlinearity caused by relaxation during the tensile test.
 
