--- a/content/3-open-questions/16.md
+++ b/content/3-open-questions/16.md
@@ -78,7 +78,7 @@ In order to apply this technology to yarn samples and use it as a standard metho
 
 To develop the standard protocol, test measurements were conducted on a new fabric using the above criteria. The use of an identical fabric ensured the comparability of the different settings of the testing machine. The resulting standard protocol is outlined in [table 16.2](#table-16-2), which shows the final parameters that allowed us to fulfill our criteria.
 
-{% figure 'table-16-1' %}
+{% figure 'table-16-2' %}
 
 For conducting a measurement for one canvas, the following steps were performed:
 
@@ -108,7 +108,7 @@ From the new and artificially aged fabrics, samples of warp and weft were taken 
 
 The results of the tensile strength measurements confirm that the standard protocol we developed is applicable without any limitation to all yarn samples tested. [Figure 16.3a](#fig-16-3) shows the average of the diameter-normalized maximum tensile strength (  *f<sub>H</sub>* in N/tex) with the corresponding standard deviation for all measured samples. All results for the tensile strength lie between 0.000120 and 0.02744 N/tex. The new fabric before and after artificial aging shows the highest values, thus these samples cover the range of weak aging. The samples from the original canvases are found in the range of middle and show strong aging, making it apparent that the artificial aging was not sufficient to reflect the values of the original samples. For the artificially aged fabrics, the warps were generally more stable than the wefts—either those that were unaged or those that had been aged for shorter periods.
 
-{% figure 'fig-16-3' %}
+{% figure 'fig-16-3' 'pdf-two-column' %}
 
 For the historical yarn samples from the nineteenth and twentieth centuries (H1U20–H10K19), the strength decreases with increasing age. In the region with the lowest strength, measured on the samples from the sixteenth to eighteenth century, the strength does not correlate with the age. Probably, the strength of these samples is more strongly influenced by further factors, such as aging conditions, pretreatment, and painting technique.
 
