--- a/content/3-open-questions/19.md
+++ b/content/3-open-questions/19.md
@@ -51,7 +51,7 @@ Mecklenburg introduced three concepts: First, that the total tension in a painti
 
 Mecklenburg demonstrated the power of his model by predicting the response of a painting to wide swings in RH; his plot of tension in a sample from a 1912 painting is shown in [figure 19.2](#fig-19-2) (solid black line). Within a few years, various authors had repeated this measurement, including another sample from Mecklenburg’s 1912 painting, measured by Hedley while at CCI (solid green line). Although different authors used different materials and different procedures, the result was a universal “hockey stick” curve, with a minimum somewhere between 65% RH and 95% RH, depending on prior history and the amount of prestrain.
 
-{% figure 'fig-19-2' %}
+{% figure 'fig-19-2' 'pdf-two-column' %}
 
 This new knowledge informed our decisions; specifically, it influenced our pursuit of better lining supports and improvements in noninterventive options, such as backing boards, enclosed case/frame design, and protection during transit. At that time, conservators and conservation scientists at CCI and other institutions were focusing on noninterventive preventive conservation measures for the broad heritage community, recommending best practices to improve the management of the museum environment and the handling, display, storage, and transit of museum objects. Controlling the physical risks and environment around the painting—with minimal alteration of the painting’s appearance or its materials—was an important option in the conservator’s repertoire.
 
