remove back slashes from Chap. 12 urls

--- a/content/2-present-practice/12.md
+++ b/content/2-present-practice/12.md
@@ -161,28 +161,28 @@ For the conservation treatment, the authors would like to thank Liza Leto-Fulton
 
 ### Materials List
 
-Aluminum Honeycomb Panel, SmallCorp. https://www.smallcorp.com/
+Aluminum Honeycomb Panel, SmallCorp. https://www.smallcorp.com
 
-Belgian Linen (unprimed 8.7 oz.), Dick Blick Art Materials. https://www.dickblick.com/
+Belgian Linen (unprimed 8.7 oz.), Dick Blick Art Materials. https://www.dickblick.com
 
-Beva 371b (thermoplastic, elastomeric polymer mixture), Conservator’s Products Company. http://www.conservators-products.com/
+Beva 371b (thermoplastic, elastomeric polymer mixture), Conservator’s Products Company. http://www.conservators-products.com
 
-Beva Gel, Conservator’s Products Company. http://www.conservators-products.com/
+Beva Gel, Conservator’s Products Company. http://www.conservators-products.com
 
-Dartek C-917 Film (nylon 6,6 film modified with a heat-stabilizing adhesive), TALAS. https://www.talasonline.com/
+Dartek C-917 Film (nylon 6,6 film modified with a heat-stabilizing adhesive), TALAS. https://www.talasonline.com
 
-Golden MSA Matte Varnish with UVLS (isobutyl and n-butyl methacrylate resin solution with amorphous silica matting agent and hindered amine UV light absorber and stabilizer), Golden Artist Colors. https://www.goldenpaints.com/
+Golden MSA Matte Varnish with UVLS (isobutyl and n-butyl methacrylate resin solution with amorphous silica matting agent and hindered amine UV light absorber and stabilizer), Golden Artist Colors. https://www.goldenpaints.com
 
-Kozo Paper (Usu Mino, 15–16 g/<sup>2</sup>), Hiromi Paper. https://hiromipaper.com/
+Kozo Paper (Usu Mino, 15–16 g/<sup>2</sup>), Hiromi Paper. https://hiromipaper.com
 
-Lauan Plywood, Lowes. https://www.lowes.com/
+Lauan Plywood, Lowes. https://www.lowes.com
 
-Metallized Reflective Mylar, Grabber Space Emergency Blanket, Recreational Equipment, Inc. https://www.rei.com/
+Metallized Reflective Mylar, Grabber Space Emergency Blanket, Recreational Equipment, Inc. https://www.rei.com
 
-Paraffin Wax, Reed Wax. https://reedwax.com/
+Paraffin Wax, Reed Wax. https://reedwax.com
 
-Reflectix Double Reflective Insulation, Reflectix, Inc. https://www.reflectixinc.com/
+Reflectix Double Reflective Insulation, Reflectix, Inc. https://www.reflectixinc.com
 
-Silicone-Coated Mylar, TALAS. https://www.talasonline.com/
+Silicone-Coated Mylar, TALAS. https://www.talasonline.com
 
 Titebond Premium Wood Glue, Franklin International. http://www.franklininternational.com/Home.aspx
