--- a/content/5-adhesives/27.md
+++ b/content/5-adhesives/27.md
@@ -140,7 +140,7 @@ A protocol was developed specifically for the historical linen canvas to enable 
 
 Pure nanocellulose treatments (solution 1) form a thin layer of a few microns on top of the canvas ([fig. 27.2](#fig-27-2)). Previous studies also reported this observation, adding that the CNC coating was particularly dense compared to the two other treatments ({% cite 'Nechyporchuk et al. 2018' %}). They also observed the formation of interfibrillar bridges between fibers of the treated surface ({% cite 'Bridarolli et al. 2018b' %}). The roughness of the canvas also seems visually reduced. For this specific treatment, the results in terms of deposition/penetration showed were independent of the mode of application (spray or brush), but this was not the case for results with solutions 2 and 3. Greater penetration of the treatment was achieved for the aqueous nanocomposite treatment MC+CNC (w) when brushed on (see [fig. 27.2](#fig-27-2)). In a separate study, a fluorescent dye (rhodamine B) was used mixed with the treatments ({% cite 'Bridarolli 2019' %}). This approach enabled us to follow the penetration of the treatment in the canvas and observe that an almost complete impregnation of the canvas could be achieved. Spraying the treatment, instead of brushing it on, limited the penetration to the very first micrometers of the treated surface, resulting in a surface coating similar to that obtained with the pure nanocellulose consolidants. The hydrophobic MC+CNC (h) also showed limited penetration, probably caused by the high viscosity of the treatment and its fast drying time.
 
-{% figure 'fig-27-2' %}
+{% figure 'fig-27-2' 'pdf-two-column' %}
 
 Multilayered NPs sprayed onto degraded cotton canvases tend to be homogeneously distributed across the surface of the canvas’s fibers and to form homogeneous monolayers ({% cite 'Kolman et al. 2018' %}). Interfibrillar bridges made of dense agglomerate of NPs were also observed by SEM (red arrows in fig. 27.2, solution 3) and could participate in the consolidation by locking the fibrous structure. Kolman et al. also observed the high penetration achieved for the NPs using micro-X-ray fluorescence but stressed the role of viscosity as a limiting factor ({% cite 'Kolman et al. 2018' %}). For concentrations above 4.5% w/w in water, the NPs remained on the canvas surface.
 
