--- a/content/5-adhesives/28.md
+++ b/content/5-adhesives/28.md
@@ -77,11 +77,11 @@ The application of adhesive meshes aims at reinforcing degraded canvas with an a
 
 For strip-lining, the bonding interfaces are readily accessible. This intervention was realized on a medium-format double-sided canvas painting ([fig. 28.3](#fig-28-3)).[^9] A sandwich system of two nonwoven polyester strips was chosen.[^10] Methyl cellulose meshes made from Benecel A4C[^11] were used, since high bond strength and adhesive stability in variable environmental conditions were required and the canvas was not sensitive to water. To prepare the bonding material, methyl cellulose meshes made with laser-cut silicone molds were partly activated by slightly moistening the nonwoven polyester before placing the adhesive meshes on the nonwoven strips and drying them under pressure ([fig. 28.4](#fig-28-4)). Activation was then initiated by spraying water with a precision pump sprayer ([fig. 28.5](#fig-28-5)). The meshes were left for ten minutes as methyl cellulose takes up water slowly.[^12] Coverage with a Melinex film without direct contact prevented the meshes from drying (see [fig. 28.5](#fig-28-5)).
 
-{% figure 'fig-28-3' %}
+{% figure 'fig-28-3' 'pdf-two-column' %}
 
 {% figure 'fig-28-4' %}
 
-{% figure 'fig-28-5' %}
+{% figure 'fig-28-5' 'pdf-two-column' %}
 
 The activation process was repeated twice to apply a total amount of about 3 ml water per 100 square centimeters of mesh, resulting in a relatively high water input that was almost completely absorbed by the mesh. To achieve the bonding, the activated strips were then placed below and on top of the tacking margin of the painting’s canvas (see [fig. 28.3](#fig-28-3)) and left to dry for twenty-four hours under pressure (20 g/cm²) with blotting paper interleaves. After complete drying, it was possible to pull the tacking margin taut enough to remount the painting on a new stretcher, proving that methyl cellulose meshes are capable of generating a sufficiently strong bond between two textiles.
 
