--- a/content/6-interventions/32.md
+++ b/content/6-interventions/32.md
@@ -79,7 +79,7 @@ The results for Neue Pinakothek and Sammlung Schack are summarized below. Differ
 
 Taken together, the two collections contain 2,475 canvas paintings, which make up 71% of the total number of paintings ([fig. 32.3a](#fig-32-3)).
 
-{% figure 'fig-32-3' %}
+{% figure 'fig-32-3' 'pdf-two-column' %}
 
 Unfortunately, the existing records for these paintings turned out to be less complete than hoped. Thirty percent of the canvas paintings have no files or reports; for a further 27%, only technological information is available, whereas 43% have at least one restoration report ([fig. 32.3b](#fig-32-3)). Many reports mention earlier interventions for which there is no documentation, even though the work must have been carried out while the piece was in the museum’s possession. Apparently, despite the long tradition of documenting conservation treatments and a simplified procedure using forms, the obligation to record interventions was often not met. Furthermore, information regarding measures undertaken prior to the museum’s acquisition is almost always missing. Consequently, the study had to be reduced to the 1,740 canvas paintings (70%) for which evaluable reports are archived—a selection that is nevertheless considered sufficient for the evaluation carried out here.
 
@@ -93,9 +93,9 @@ The different measures considered in detail ([figs. 32.4](#fig-32-4), [32.5](#fi
 
 -   1,181 of the paintings are thought to be unlined. Documentary analysis and experience show that measures may still have been carried out on the canvases. Even before thread-by-thread tear mending established itself in the 1980s, tears were often only mended locally, for example by attaching patches of tow or fabric to the back. Tacking-edge repairs can range from local tear stabilization to restretching a painting after complete strip-lining—without necessarily having been documented.
 
-{% figure 'fig-32-4' %}
+{% figure 'fig-32-4' 'pdf-two-column' %}
 
-{% figure 'fig-32-5' %}
+{% figure 'fig-32-5' 'pdf-two-column' %}
 
 According to a subjective impression of the entire collection, the above result—that approximately 70% of the 1,740 documented paintings have not yet been lined, marouflaged, or impregnated—appears to be on the low side. The reason is that the 735 canvas paintings (30% of the total number) without documentation are predominantly pictures that have been kept in storage for decades and not exhibited. On the whole, if there were no plans to show the paintings, they were not restored.
 
