make image larger and move image

--- a/content/7-modern-contemporary/40.md
+++ b/content/7-modern-contemporary/40.md
@@ -139,9 +139,7 @@ Results for each treatment are summarized in [table 40.1](#table-40-1) and prese
 
 {% figure 'fig-40-6' %}
 
-{% figure 'fig-40-7' %}
-
-{% figure 'fig-40-8' %}
+{% figure 'fig-40-7' 'pdf-two-column' %}
 
 During the early monitoring of the cracked model paintings, prior to any treatment, cupping increased after the tension was released, exceeding the painting’s half thickness, thus confirming curl as the dominant driving force ({% cite 'Hough and Michalski 1999' 'fig. 7' %}).
 
@@ -174,6 +172,8 @@ Only one mystery remained: since the stainless-steel strips, treatment 4, did no
 ### Viscoelastic Response over Time
 
 In the graph on left in [figure 40.8](#fig-40-8), we can follow the viscoelastic behavior of the treatments that were never keyed out, starting at five minutes after they were released from the suction table up to twenty-one years later. This type of graph—the logarithm of an elastic measurement versus the logarithm of time (a log-log plot)—is conventional in viscoelastic studies of polymers, because it can be placed in the context of master curves, as described elsewhere in these proceedings by [Daly Hartin et al.](/3-open-questions/19/) and by [Hagan](/1-history/2/). The heavy gray line at the top of the graph on left in [figure 40.8](#fig-40-8) shows the slope of the master curve for stress relaxation of oil paintings measured by Daly Hartin et al. for the range of five minutes to one hundred years, which was 1/13, that is, 1 log unit in height for each 13 log units of time.[^9] The overall slope of the treatments that failed (and allowed the cupping to return) is similar to this slope. Even sized samples with a rapid increase in cupping in the first few hours followed by a striking decrease that lasted several months (treatments 10, 11, 12, 13), did return over the years to an overall slope of \~1/13, if one simply considers the first and last data points.
+
+{% figure 'fig-40-8' %}
 
 Treatment 1 (heat and moisture) also shows a small wobble in its plot, though not as pronounced as that of the sizes. This plateau between a few days and a few months led us to believe in our 1999 paper that this was a final plateau, but over the last twenty-one years it has returned to its initial rate of climb and reaches just short of completely untreated cracks.
 
