Move images to end

--- a/content/8-posters/46.md
+++ b/content/8-posters/46.md
@@ -20,24 +20,6 @@ Textiles with a woven pattern were used as painters’ canvases by Spanish and I
 
 In this poster, textiles that have been hidden for centuries between paint and lining canvas come to life in handwoven reconstructions of the support canvas of five paintings by El Greco ([fig. 46.1](#fig-46-1-a)), Titian ([fig. 46.2](#fig-46-2-a)), Caravaggio ([fig. 46.3](#fig-46-3-a)), and Velázquez ([figs. 46.4](#fig-46-4-a), [46.5](#fig-46-5-a). The support canvas used by the great masters is shown in each of the figures.
 
-### El Greco
-
-{% figuregroup '2' 'fig-46-1-a, fig-46-1-b, fig-46-1-c, fig-46-1-d' 'El Greco (Greek, 1541–1614), *The Burial of the Count of Orgaz*, 1586. Oil on canvas, 480 x 360 cm (189 x 141 3/4 in.). (a) Piece of original canvas showing weave pattern. (b) Weave draft ([[De los Rios y Rojas and Socorro 1977]]). (c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a and b) [[De los Rios y Rojas and Socorro 1977]], (c) Lab O, (d) Lab O / João Mariano' %}
-
-### Titian
-
-{% figuregroup '2' 'fig-46-2-a, fig-46-2-b, fig-46-2-c, fig-46-2-d' 'Titian (Italian, ca. 1488–1576), *The Vendramin Family*, 1540–1545. Oil on canvas, 206 x 288.5 cm (81 1/8 x 113 5/8 in.). (a) Detail of Gabriel’s left hand before cleaning and after retouching. (b) Handmade drawing of the pattern. (c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) National Gallery London, (b and c) Lab O, (d) Lab O / João Mariano' %}
-
-### Caravaggio
-
-{% figuregroup '2' 'fig-46-3-a, fig-46-3-b, fig-46-3-c, fig-46-3-d' 'Caravaggio (Italian, 1571–1610), *The Crucifixion of Saint Andrew*, 1606–1607. Oil on canvas, 202.5 x 152.7 cm (79 3/4 x 60 1/8 in.). (a) Radiograph. (b) Handmade drawing of the pattern. (c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) Cleveland Museum of Art, (b and c) Lab O, (d) Lab O / João Mariano' %}
-
-### Velázquez
-
-{% figuregroup '2' 'fig-46-4-a, fig-46-4-b, fig-46-4-c, fig-46-4-d' 'Diego Velázquez (Spanish, 1599–1660), *Supper at Emmaus*, 1622–1623. Oil on canvas, 123.2 x 132.7 cm (48 1/2 x 52 1/4 in.). (a) Radiograph. (b) Handmade drawing of the pattern. (c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) Metropolitan Museum of Art, (b and c) Lab O, (d) Lab O / João Mariano' %}
-
-{% figuregroup '2' 'fig-46-5-a, fig-46-5-b, fig-46-5-c, fig-46-5-d' 'Diego Velázquez (Spanish, 1599–1660), *Education of the Virgin*, 1617–1618. Oil on canvas, 168 x 136 cm (66 1/8 x 53 1/2 in.). (a) Radiograph. (b) Handmade drawing of the pattern. (c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) Yale University Art Gallery, (b and c) Lab O, (d) Lab O / João Mariano' %}
-
 ## Material and Methods
 
 Close examinations enabled Lab O to analyze the weave structure of the patterned textile canvas. Using software developed for computer-aided handlooms, Lab O then developed a weave draft for the reproduction of these linen textiles.
@@ -53,3 +35,21 @@ All reconstructions were then woven in linen on a dobby loom.
 Lab O, a laboratory for handwoven canvas located in Odemira, Portugal, was founded to deepen the technical and practical knowledge of historical canvases and to promote their analysis, authentication, and conservation. The work at Lab O connects craft, entrepreneurship, technology, science, and art history.
 
 The research and reconstruction of canvases contributes to the understanding of technical painting and art history and brings attention to an understudied aspect of textile production during the period that an artwork was created. Canvas reconstruction enables new research and may provide insight into why old masters used these supports, as well as how and when these textiles were made.
+
+### El Greco
+
+{% figuregroup '2' 'fig-46-1-a, fig-46-1-b, fig-46-1-c, fig-46-1-d' '**Figure 46.1** El Greco (Greek, 1541–1614), *The Burial of the Count of Orgaz*, 1586. Oil on canvas, 480 × 360 cm (189 × 141 3/4 in.). (a) Piece of original canvas showing weave pattern. (b) Weave draft (de los Rios y Rojas and Socorro 1977). &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a and b) de los Rios y Rojas and Socorro 1977, &#40;c) Lab O, (d) Lab O / João Mariano' %}
+
+### Titian
+
+{% figuregroup '2' 'fig-46-2-a, fig-46-2-b, fig-46-2-c, fig-46-2-d' '**Figure 46.2** Titian (Italian, ca. 1488–1576), *The Vendramin Family*, 1540–45. Oil on canvas, 206 × 288.5 cm (81 1/8 × 113 5/8 in.). (a) Detail of Gabriel’s left hand before cleaning and after retouching. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) National Gallery London, (b and c) Lab O, (d) Lab O / João Mariano' %}
+
+### Caravaggio
+
+{% figuregroup '2' 'fig-46-3-a, fig-46-3-b, fig-46-3-c, fig-46-3-d' '**Figure 46.3** Caravaggio (Italian, 1571–1610), *The Crucifixion of Saint Andrew*, 1606–7. Oil on canvas, 202.5 × 152.7 cm (79 3/4 × 60 1/8 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) Cleveland Museum of Art, (b and c) Lab O, (d) Lab O / João Mariano' %}
+
+### Velázquez
+
+{% figuregroup '2' 'fig-46-4-a, fig-46-4-b, fig-46-4-c, fig-46-4-d' '**Figure 46.4** Diego Velázquez (Spanish, 1599–1660), *Supper at Emmaus*, 1622–23. Oil on canvas, 123.2 × 132.7 cm (48 1/2 × 52 1/4 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) Metropolitan Museum of Art, (b and c) Lab O, (d) Lab O / João Mariano' %}
+
+{% figuregroup '2' 'fig-46-5-a, fig-46-5-b, fig-46-5-c, fig-46-5-d' '**Figure 46.5** Diego Velázquez (Spanish, 1599–1660), *Education of the Virgin*, 1617–18. Oil on canvas, 168 × 136 cm (66 1/8 × 53 1/2 in.). (a) Radiograph. (b) Handmade drawing of the pattern. &#40;c) Computer-generated weave draft. (d) Handwoven reconstruction of the canvas. Images: (a) Yale University Art Gallery, (b and c) Lab O, (d) Lab O / João Mariano' %}
