Make image larger

--- a/content/8-posters/50.md
+++ b/content/8-posters/50.md
@@ -68,7 +68,7 @@ For the next step, what was left on the test pieces after removal was investigat
 
 {% figure 'fig-50-3' %}
 
-{% figure 'fig-50-4' %}
+{% figure 'fig-50-4' 'pdf-two-column' %}
 
 As the spectrum of wax resin A before aging shows, its peak intensity became weaker at about 1735 c<sup>−1</sup> and a little stronger at about 1710 c<sup>−1</sup> by the removal. This implies that the spectrum gradually grows more similar to that of a resin than to that of beeswax. These changes of spectra were common in almost all the mixtures (A–E). These results suggest that beeswax tends to be removed better than resins. The spectra after aging showed changes by the removal similar to those observed before aging.
 
